--- a/store/templates/store/contact_detail.html
+++ b/store/templates/store/contact_detail.html
@@ -17,18 +17,18 @@
             <div class="col">
                 <div class="row">
                     <div class="col form-group">
-                        <label class="form-control" for="{{ CForm.id_for_label }}">Ad. de facturation</label><br />
-                        {% bootstrap_form CForm %}
+                        <label class="form-control" for="{{ CForm_dsa.id_for_label }}">Ad. de facturation</label><br />
+                        {% bootstrap_form CForm_dsa %}
                     </div>
                     <div class="col form-group">
-                        <label class="form-control" for="{{ CForm.id_for_label }}">Ad. de livraison</label><br />
-                        {% bootstrap_form CForm %}
+                        <label class="form-control" for="{{ CForm_dsa.id_for_label }}">Ad. de livraison</label><br />
+                        {% bootstrap_form CForm_dia %}
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="row form-group">
-                    <label class="form-control" for="{{ CForm.id_for_label }}">Historique de Commandes</label><br />
+                    <label class="form-control" for="{{ CForm_dsa.id_for_label }}">Historique de Commandes</label><br />
                     {% for booking in contact.bookings.all %}
                         <p><a class="open-booking" href="{% url 'store:booking_detail' booking_id=booking.id %}"
                             data-popup-url="{% url 'store:booking_detail' booking_id=booking.id %}">
