--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -73,6 +73,13 @@
                                 <i class="bi bi-box-arrow-right me-1"></i>
                             </button>
                         </a>
+                        {% else %}
+                            <a href="{% url 'store:login' %}">
+                                <button class="btn btn-outline-dark" type="submit">
+                                    <i class="bi bi-box-arrow-right me-1"></i>
+                                    Login
+                                </button>
+                            </a>
                         {% endif %}
                     </div>
                 </div>
