--- a/store/templates/store/ouvrage_modal.html
+++ b/store/templates/store/ouvrage_modal.html
@@ -1,21 +1,26 @@
 <script>
-    $(document).on("click", ".open-ouvrage", function (e) {
-      e.preventDefault();
-      var $popup = $("#popup");
-      var popup_url = $(this).data("popup-url");
-      $(".modal-body", $popup).load(popup_url, function () {
-        $popup.modal("show");
+  $(document).on("click", ".open-ouvrage", function (e) {
+    e.preventDefault();
+    var $popup = $("#popup");
+    var popup_url = $(this).data("popup-url");
+    $(".modal-body", $popup).load(popup_url, function () {
+      $popup.modal("show");
+      $('.closemodal').click(function() {
+        $('.modalwindow').modal('hide');
       });
     });
-  </script>
+  });
+</script>
 
-<div id="popup" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-body"></div>
-        <div class="modal-footer">
+<div id="popup" class="modal fade modalwindow" role="dialog">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info closemodal" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+</div>
 
   
