--- a/store/templates/store/item_modal.html
+++ b/store/templates/store/item_modal.html
@@ -1,5 +1,5 @@
 <script>
-  $(document).on("click", ".open-booking", function (e) {
+  $(document).on("click", ".open-item", function (e) {
     e.preventDefault();
     var $popup = $("#popup");
     var popup_url = $(this).data("popup-url");
@@ -13,14 +13,14 @@
 </script>
 
 <div id="popup" class="modal fade modalwindow" role="dialog">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-body"></div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-info closemodal" data-dismiss="modal">Close</button>
-        </div>
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info closemodal" data-dismiss="modal">Close</button>
       </div>
     </div>
+  </div>
 </div>
 
   
