--- a/store/templates/store/propos.html
+++ b/store/templates/store/propos.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block content %}
-<div class="container px-4 px-lg-1 mt-5 justify-content-start">
+<hr class="detail-separator">
+<h1 class="intro-text text-center">A Propos</h1>
+<hr class="detail-separator">
 <div class="card">
     <img  class="align-self-center" width="30%" height="auto" src="{% static 'store/img/selio.png' %}" alt="..." />
     <label>La SELIO, Société d’édition et librairie d’ Informations ouvrières porte le nom du journal Informations ouvrières, tribune libre de la lutte des classes.
