--- a/store/templates/store/db.html
+++ b/store/templates/store/db.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+<hr class="detail-separator">
+<h1 class="intro-text text-center">Gestion Base</h1>
+<hr class="detail-separator">
 {% if user.is_authenticated %}
 <div>
     <form class="form-label" action="{% url 'store:dataBase' %}" method=post enctype=multipart/form-data>
