--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -7,8 +7,8 @@
 <h1 class="intro-text text-center">{{ ouvrage_title }}</h1>
 <hr class="detail-separator">
 
-<div class="row gx-4 gx-lg-5 row-cols-auto row-cols-md-auto row-cols-xl-4 justify-content-center">
-    <div class="card h-100">
+<div class="container row gx-4 gx-lg-5 row-cols-auto row-cols-md-auto row-cols-xl-4 justify-content-center">
+    <div class="card">
         <!-- Sale badge-->
         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
         <!-- Product image-->
