--- a/store/templates/store/propos.html
+++ b/store/templates/store/propos.html
@@ -5,7 +5,7 @@
 <hr class="detail-separator">
 <h1 class="intro-text text-center">A Propos</h1>
 <hr class="detail-separator">
-<div class="card">
+<div class="card container-sm">
     <img  class="align-self-center" width="30%" height="auto" src="{% static 'store/img/selio.png' %}" alt="..." />
     <label>La SELIO, Société d’édition et librairie d’ Informations ouvrières porte le nom du journal Informations ouvrières, tribune libre de la lutte des classes.
         La SELIO est avant tout une librairie. Elle a été constituée, comme le montre son catalogue pour assurer d’abord un fonds de base à toute personne intéressée par le mouvement ouvrier international, son histoire et son développement, comportant les grands textes classiques du marxisme mais aussi des titres du domaine historique, voire scientifique, des documents très divers, sans oublier une petite sélection de romans dont le thème est lié au mouvement ouvrier, ainsi que des biographies ou autobiographies dans le même domaine, au sens large.
