fix 2 adresses bugs

--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -6,7 +6,7 @@
 <div class="card container">
     {% if basket %}
         <label>Commande</label>
-        <table class="table">
+        <table class="table row-cols-1">
                 <thead>
                     <tr>
                         <th>Ouvrage</th>
@@ -48,71 +48,72 @@
                 </tbody>
         </table>
     {% else %}
-        <div class="alert alert-warning row" role="alert"><a href="{% url 'store:store' select_type='All' select_id='All' %}" class="btn btn-default btn-lg pull-right">Remplir mon panier !</a>
+        <div class="alert alert-warning row" role="alert">
+            <a href="{% url 'store:store' select_type='All' select_id='All' %}" class="btn btn-default btn-lg pull-right">Remplir mon panier !</a>
             <i class="bi bi-shop-window pull-left"></i> <h4>Votre panier est vide :'(</h4>
             <p>Commencez dès maintenant à rechercher votre article préféré dans notre vaste catalogue de produits !</p>
         </div>
     {% endif %}<br /><br />
     {% if user.is_authenticated %}
-        <div class="card container">
-            <form class="form-label row" action="{% url 'store:basket' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="basket" value="{{ basket }}" >
+            <div class="col-10">
+                {% include 'store/contact_detail.html' %}
+            </div>
+            <form class="col-2" action="{% url 'store:basket' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="basket" value="{{ basket }}" >
-                <div class="col-10">
-                    {% include 'store/contact_detail.html' %}
-                </div>
-                <div class="col-2">
-                    <button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
-                </div>
+                <button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
             </form>
-        </div>
     {% else %}
         {% if errors %}
         <div>
-          {% for key in errors.keys %}
+          {% for error in errors %}
           {% autoescape off %}
-            {{ errors }}
+            <p class="alert-danger">{{ error }}</p>
           {% endautoescape %}
           {% endfor %}
         </div>
-        {% endif %}
-        <form class="form-label" action="{% url 'store:login' %}" method="get">
+        <form class="form-label row" action="{% url 'store:login' %}" method="get">
             {% csrf_token %}
             <input type="hidden" name="basket" value="{{ basket }}" >
-            <div class="row">
-                <button type="submit" class="col-4 btn" >Si vous avez déjà un compte, identifiez vous</button>
-            </div>
+            <button type="submit" class="col-4 btn" >Si vous avez déjà un compte, identifiez vous</button>
         </form>
-        <label class="row">Contact</label>
+        {% endif %}
         <div class="row">
-            <div class="col-1">
-                    <form action="{% url 'store:basket' %}" method="get">
-                        <input type="hidden" name="basket" value="{{ basket }}" >
-                        {% csrf_token %}
-                        {% if checked == 'checked' %}
-                            <input type="checkbox" class="input-sm" name="check" value="unchecked" onclick='this.form.submit();' checked="checked">
-                        {% else %}
-                            <input type="checkbox" class="input-sm" name="check" value="checked" onclick='this.form.submit();'>
-                        {% endif %}
-                    </form>
-            </div>
-            <div class="col-11">
-                <form class="row" action="{% url 'store:basket' %}" method="post">
-                    {% csrf_token %}
+                <form action="{% url 'store:basket' %}" method="get">
                     <input type="hidden" name="basket" value="{{ basket }}" >
-                    <input class="form-control" type="email" name="email" placeholder="Email" required><br />
-                    {{ CFormSet.management_form }}
-                        {% for CForm in CFormSet %}
-                        <div class="col-5">
-                            {% bootstrap_form CForm %}
-                        </div>
-                        {% endfor %}
-                    <div class="col-2">
-                        <button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
-                    </div>
+                    {% csrf_token %}
+                    {% if checked == 'checked' %}
+                        <input type="checkbox" class="input-sm" name="check" value="unchecked" onclick='this.form.submit();' checked="checked">
+                        <i>Cocher si l'adresse de livraison est défférente.</i>
+                    {% else %}
+                        <input type="checkbox" class="input-sm" name="check" value="checked" onclick='this.form.submit();'>
+                        <i>Cocher si l'adresse de livraison est défférente.</i>
+                    {% endif %}
                 </form>
-            </div>
         </div>
+            <form class="row" action="{% url 'store:basket' %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="basket" value="{{ basket }}" >
+                <div class="row">
+                <input class="form-control col-3" type="email" name="email" placeholder="Email" required><br /></div>
+                <div class="row">
+                    <div class="col-5">
+                        <p class="form-title" for="{{ CForm_dsa.id_for_label }}">Adresse de facturation</p><br />
+                        {% bootstrap_form CForm_dsa %}
+                    </div>
+                    {% if checked == 'checked' %}
+                    <div class="col-5">
+                        <p class="form-title" for="{{ CForm_dia.id_for_label }}">Adresse de livraison</p><br />
+                        {% bootstrap_form CForm_dia %}
+                    </div>
+                    {% endif %}
+                    <div class="col-2">
+                        <br /><br /><button type="submit" class="btn btn-success" onclick="return confirm('Merci de confirmer');">Commander</button>
+                    </div>
+                </div>
+            </form>
     {% endif %}
 </div>
 {% endblock %}
