--- a/store/templates/store/booking_detail.html
+++ b/store/templates/store/booking_detail.html
@@ -9,7 +9,7 @@
     <h2 class="intro-text text-center">Commande N° {{ booking.id }}</h2>
     <hr class="detail-separator">    
     
-    <div class="container card h-50">
+    <div class="container card">
         <div class="row">
             <div class="col form-group">
                     <p>{{ booking.created_at }}</p>
