--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -36,7 +36,7 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center">
-                                    <a class="btn btn-outline-dark mt-auto open-ouvrage" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
+                                    <a class="btn btn-outline-dark mt-auto open-item" href="{% url 'store:detail' ouvrage_id=ouvrage.id %}"
                                     data-popup-url="{% url 'store:detail' ouvrage_id=ouvrage.id %}">
                                     Sélectionner
                                     </a>
